--- a/games/game1.html
+++ b/games/game1.html
@@ -1944,16 +1944,16 @@ return colorScheme;
                                                     <div style="display: block;">
                                                         <h2 style="margin-left: 10px; margin-top: 10px; font-size: 20px; text-align: left;">Бутылочка</h2>
                                                         <div style="display: flex; justify-content: left;margin-top: -20px;">
-                                                            <div style="margin-left: 10px; display: block;">
+                                                            <div style="margin-left: 10px; display: block; ">
                                                                 <p><b>Сейчас онлайн</b></p>
-                                                                <p style="text-align: left; margin-top: -10px;">1113 человек</p>
+                                                                <p style="text-align: left; margin-top: -10px;color: gray">1113 человек</p>
                                                             </div>
                                                             <div style="margin-left: 10px; display: block;">
                                                                 <p><b>Всего игроков</b></p>
-                                                                <p style="text-align: left; margin-top: -10px;">1М человек</p>
+                                                                <p style="text-align: left; margin-top: -10px;color: gray">1М человек</p>
                                                             </div>
-                                                        </div>
-                                                        <button class="game-banner__button" style="height: 35px; width: 200px; margin-left: 10px; background-color: #447bba; border-width: 0px; border-radius: 10px;"><p  class="FlatButton__content" style="margin-top: 1px; margin-left: -2px; font-size: 14px; font-weight: 100;">Играть</p></button>
+                                                        </div>  
+                                                        <button class="game-banner__button" style="height: 35px; width: 250px; margin-left: 10px; background-color: #447bba; border-width: 0px; border-radius: 10px; margin-top: 10px;"><p  class="FlatButton__content" style="margin-top: 1px; margin-left: -2px; font-size: 14px; font-weight: 100;">Играть</p></button>
                                                     </div>
                                                 </div>
                                                 <br>
@@ -1964,7 +1964,9 @@ return colorScheme;
                                                 <div style="height: 1px;"></div>
                                                 <h2 style="text-align: left;  margin-left: 20px;"><b>Описание:</b></h2>
 
-                                                <p  style="text-align: left; margin-left: 20px; margin-right: 20px;word-wrap: break-word;">МногобуквМногобуквМногобуквМногобуквМногобуквМногобуквМногобуквМногобуквМногобуквМногобуквМногобуквМногобуквМногобуквМногобуквМногобуквМногобуквМногобуквМногобуквМногобукв</p>
+                                                <p  style="text-align: left; margin-left: 20px; margin-right: 20px;word-wrap: break-word; color: gray;">Постапокалипсис уже наступил!
+                                                    <br><br>
+                                                    Клановые битвы, боссы и общение!</p>
                                                 <br>
                                                 <div style="display: flex; justify-content: left;">
                                                     <div style="width: 15px;"></div>
@@ -2040,6 +2042,22 @@ return colorScheme;
                                                         </div>
                                                         <div style="height: 5px;"></div>
                                                     </div>
+                                                    <div style="background-color: #ebf2fa; border-radius: 10px; margin-left: 20px; margin-top: 10px; margin-right: 20px;">
+                                                        <div style="height: 5px;"></div>
+                                                        <div style="display: flex; justify-content: left;">
+                                                            <img style="width: 50px; height: 50px; object-fit: cover;" src="static/images/strategy.png">
+                                                            <p style="margin-top: 17px; text-align: center; ">Достижение 1</p>
+                                                        </div>
+                                                        <div style="height: 5px;"></div>
+                                                    </div>
+                                                    <div style="background-color: #ebf2fa; border-radius: 10px; margin-left: 20px; margin-top: 10px; margin-right: 20px;">
+                                                        <div style="height: 5px;"></div>
+                                                        <div style="display: flex; justify-content: left;">
+                                                            <img style="width: 50px; height: 50px; object-fit: cover;" src="static/images/strategy.png">
+                                                            <p style="margin-top: 17px; text-align: center; ">Достижение 1</p>
+                                                        </div>
+                                                        <div style="height: 5px;"></div>
+                                                    </div>
                                                 </div>
                                                 <div style="display: block;width: 300px;">
                                                     <h2 style="text-align: center;">Предстоит получить</h2>
@@ -2051,6 +2069,7 @@ return colorScheme;
                                                         </div>
                                                         <div style="height: 5px;"></div>
                                                     </div>
+                                                    
                                                     <div style="background-color: white; border-radius: 10px; margin-left: 20px; margin-top: 6px; margin-right: 20px;border: solid #ebf2fa; border-width: 2px;">
                                                         <div style="height: 5px;"></div>
                                                         <div style="display: flex; justify-content: left;">
@@ -2075,6 +2094,22 @@ return colorScheme;
                                                         </div>
                                                         <div style="height: 5px;"></div>
                                                     </div>
+                                                    <div style="background-color: white; border-radius: 10px; margin-left: 20px; margin-top: 6px; margin-right: 20px;border: solid #ebf2fa; border-width: 2px;">
+                                                        <div style="height: 5px;"></div>
+                                                        <div style="display: flex; justify-content: left;">
+                                                            <img style="width: 50px; height: 50px; object-fit: cover;" src="static/images/strategy.png">
+                                                            <p style="margin-top: 17px; text-align: center; ">Достижение 1</p>
+                                                        </div>
+                                                        <div style="height: 5px;"></div>
+                                                    </div>
+                                                    <div style="background-color: white; border-radius: 10px; margin-left: 20px; margin-top: 6px; margin-right: 20px;border: solid #ebf2fa; border-width: 2px;">
+                                                        <div style="height: 5px;"></div>
+                                                        <div style="display: flex; justify-content: left;">
+                                                            <img style="width: 50px; height: 50px; object-fit: cover;" src="static/images/strategy.png">
+                                                            <p style="margin-top: 17px; text-align: center; ">Достижение 1</p>
+                                                        </div>
+                                                        <div style="height: 5px;"></div>
+                                                    </div>  1
 
                                                 </div>
                                             </div>
@@ -2107,7 +2142,7 @@ return colorScheme;
                                                     <div style="height: 5px;"></div>
                                             </div>
                                             <div style="background-color: white; width: 100%; margin-top: 10px; border-radius: 10px;">
-                                                <p class="page_block_header_inner _header_inner"><h2><b>Остаьт свой отзыв</b></h2></p>
+                                                <p class="page_block_header_inner _header_inner"><h2><b>Оставьте свой отзыв</b></h2></p>
                                                 <div style="display: flex; justify-content: left;">
                                                     <textarea  style="margin-left: 50px; border-radius: 10px; height: 300px; width: 700px; resize:none;" rows=10 ></textarea>
                                                     <button style="height: 40px; width: 40px; margin-top: 270px; margin-left: 10px; border-radius: 10px; border-color: white; ">➤</button>
