--- a/games/game7.html
+++ b/games/game7.html
@@ -1946,11 +1946,11 @@ return colorScheme;
                                                         <div style="display: flex; justify-content: left;margin-top: -20px;">
                                                             <div style="margin-left: 10px; display: block;">
                                                                 <p><b>Сейчас онлайн</b></p>
-                                                                <p style="text-align: left; margin-top: -10px;">1113 человек</p>
+                                                                <p style="text-align: left; margin-top: -10px;color: gray;color: gray;">1113 человек</p>
                                                             </div>
                                                             <div style="margin-left: 10px; display: block;">
                                                                 <p><b>Всего игроков</b></p>
-                                                                <p style="text-align: left; margin-top: -10px;">1М человек</p>
+                                                                <p style="text-align: left; margin-top: -10px;color: gray;color: gray;">1М человек</p>
                                                             </div>
                                                         </div>
                                                         <button class="game-banner__button" style="height: 35px; width: 200px; margin-left: 10px; background-color: #447bba; border-width: 0px; border-radius: 10px;"><p  class="FlatButton__content" style="margin-top: 1px; margin-left: -2px; font-size: 14px; font-weight: 100;">Играть</p></button>
@@ -2107,7 +2107,7 @@ return colorScheme;
                                                     <div style="height: 5px;"></div>
                                             </div>
                                             <div style="background-color: white; width: 100%; margin-top: 10px; border-radius: 10px;">
-                                                <p class="page_block_header_inner _header_inner"><h2><b>Остаьт свой отзыв</b></h2></p>
+                                                <p class="page_block_header_inner _header_inner"><h2><b>Оставьте свой отзыв</b></h2></p>
                                                 <div style="display: flex; justify-content: left;">
                                                     <textarea  style="margin-left: 50px; border-radius: 10px; height: 300px; width: 700px; resize:none;" rows=10 ></textarea>
                                                     <button style="height: 40px; width: 40px; margin-top: 270px; margin-left: 10px; border-radius: 10px; border-color: white; ">➤</button>
