--- a/search_page.html
+++ b/search_page.html
@@ -1936,7 +1936,7 @@ return colorScheme;
                                             <div class="game-banner__info">
                                                 <p class="game-banner__title" style="align-self: center;;" data-role="game-link">Поиск по каталогу:</p>
                                             </div>
-                                                <input type="text" class="search_field" placeholder="Поиск по играм">
+                                                <input type="text" class="search_field" style="border-width: 1px;" placeholder="Поиск по играм">
                                             
                                             
                                             <a href="/elka25game?ref=5" class="search_button" style="background-color: #447bba;" data-role="game-link">Искать</a>
@@ -1949,16 +1949,31 @@ return colorScheme;
                                         <details>
                                             <summary style="text-align: left; margin-left: 120px">Фильтры поиска</summary>
                                             <div style="height: 10px;"></div>
-                                            <div style="display: flex; justify-content: left;">
+                                            <div style="display: flex; justify-content: left;margin-left: 85px;">
                                                 <p style="margin-left: 50px; margin-top: 9px;">Жанр: </p>
-                                                <select style="margin-left: 50px; border-radius: 10px; height: 30px; width: 200px;">
+                                                <select style="margin-left: 50px; border-radius: 10px; height: 30px; width: 200px; border-width: 1px;">
                                                     <option>Выберете жанр</option>
-                                                    <option>Квесты</option>
+                                                    <option>Развлечения</option>
+                                                    <option>Общение</option>
+                                                    <option>Экономические</option>
+                                                    <option>Три в ряд</option>
+                                                    <option>Ролевые</option>
+                                                    <option>Гиперказуальные</option>
+                                                    <option>Аркады</option>
+                                                    <option>Словесные</option>
+                                                    <option>Настольные</option>
+                                                    <option>Гонки</option>
+                                                    <option>Стратегии</option>
+                                                    <option>3D-шутеры</option>
+                                                    <option>Симуляторы</option>
+                                                    <option>Головоломки</option>
+                                                    <option>ТГоловоломки</option>  
+
                                                 </select>
                                             </div>
-                                            <div style="display: flex; justify-content: left;">
+                                            <div style="display: flex; justify-content: left;margin-left: 85px;">
                                                 <p style="margin-left: 50px; margin-top: 9px;">Оценка: </p>
-                                                <select style="margin-left: 39px; border-radius: 10px; height: 30px;  width: 200px;">
+                                                <select style="margin-left: 39px; border-radius: 10px; height: 30px;  width: 200px;border-width: 1px;">
                                                     <option>Выберете оценку</option>
                                                     <option>1</option>
                                                     <option>2</option>
